--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,109 @@
-body {
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 20px;
   font-family: sans-serif;
+  background: #222;
+  color: #333;
+}
+
+body {
+  margin: 0;
+  padding: 1rem;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#root {
+  background: #fff;
+  margin: 1rem auto;
+  width: 20rem;
+  max-width: 100%;
+  border: 0.25rem solid #000;
+  border-radius: 0.5rem;
+}
+
+h1 {
+  margin: 0;
+  padding: 1rem;
+  text-align: center;
+}
+
+button {
+  cursor: pointer;
+  background: none;
+  border: none;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  padding: 0.5rem 0.75rem;
+  display: flex;
+  align-items: center;
+}
+
+li > * {
+  display: block;
+}
+
+li button {
+  font-size: 1.25rem;
+  padding: 0;
+  margin: 0 0.1rem;
+}
+
+.delete {
+  font-size: 0.75rem;
+  margin-left: 0.5rem;
 }
 
 .winning {
-  background: yellow;
+  background: #fffdb6;
+}
+
+input {
+  border: 1px solid #ddd;
+  background: none;
+  font-size: inherit;
+  font-weight: bold;
+  margin: 0;
+  padding:  0.3em 0.4em;
+  width: 5rem;
+  flex-grow: 1;
+}
+
+.score {
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 0 0.25rem 0 1rem;
+}
+
+.add-player {
+  display: block;
+  background: #222;
+  color: #fff;
+  font-weight: bold;
+  font-size: 1rem;
+  margin: 1rem auto;
+  padding: 0.5em 1em;
+  border: 0.25rem solid #000;
+  border-radius: 0.5rem;
+}
+
+.add-player:hover {
+  background: #000;
+}
+
+.loading {
+  text-align: center;
+  padding: 3rem 0 5rem;
 }
