--- a/src/styles.css
+++ b/src/styles.css
@@ -127,3 +127,16 @@ footer a:hover {
 footer p {
   margin: 1.5rem 0 0;
 }
+
+.history {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.history button {
+  font-size: 1rem;
+}
+
+button[disabled] {
+  cursor: not-allowed;
+}
